--- a/package.json
+++ b/package.json
@@ -1,23 +1,15 @@
 {
   "name": "ai-playground",
-  "description": "Scratch-like model builder – plug and play layers to design trainable models",
   "version": "1.0.0",
-  "type": "module",
+  "description": "Scratch-like model builder – plug and play layers to design trainable models",
+  "private": true,
+  "workspaces": [
+    "frontend",
+    "backend"
+  ],
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
-    "typescript": "~5.3.0",
-    "vite": "^5.4.0",
-    "@vitejs/plugin-react": "^4.3.4"
-  },
-  "private": true
+    "dev": "npm run dev --workspace=ai-playground-frontend",
+    "build": "npm run build --workspace=ai-playground-frontend",
+    "preview": "npm run preview --workspace=ai-playground-frontend"
+  }
 }
