--- a/NeuralCanvas/backend/requirements.txt
+++ b/NeuralCanvas/backend/requirements.txt
@@ -1,8 +1,8 @@
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 websockets==14.1
-torch==2.5.1
-torchvision==0.20.1
+torch>=2.0.0
+torchvision>=0.15.0
 pydantic==2.10.3
 google-generativeai==0.8.3
 groq==0.13.0
